--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,10 @@
     observer.observe(el);
   });
 </script>
-
+<script>
+  console.log("JS is running");
+  alert("JS loaded");
+</script>
 <body>
   {{ content }}
 </body>
