--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ p {
 }
 
 blockquote {
-  margin: 1rem 0 1rem 1.2rem;
-  padding-left: 0.8rem;
-  border-left: 2px solid #888;
-  color: #111;
-  font-style: normal;
+  margin: 1.5rem 0 1.5rem 1.2rem;
+  padding: 0.8rem 1rem;
+  border-left: 3px solid #aaaaaa;
+  background: rgba(255, 255, 255, 0.03);
+  color: #f0f0f0;
 }
 
 hr {
