--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       });
     }, { threshold: 0.1 });
 
-    document.querySelectorAll('p, blockquote, h2, h3, h4').forEach(el => {
+    document.querySelectorAll('p, h2, h3, h4').forEach(el => {
       el.classList.add('reveal');
       observer.observe(el);
     });
